# atoi

./: .tool-versions  CMakeLists.txt  README.adoc
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  atoi.c  atoi.h  atoi.test.cpp
